# brownie

./: .gitignore  AGENTS.md  Cargo.toml  Home.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.agent/: system_prompt.md
.agent/rules/: common.md
.agent/workflows/: blueprint.md  trace.md
.brownie-control/: current-phase-prompt.md  latest-review.md  next-phase-prompt.md  phase-state.json  stop-reason.md
.codex/tasks/: implement-current-phase.md  review-and-plan-next-phase.md
.github/workflows/: ci.yml
config/: config.yaml
crates/brownie-agent-loop/: Cargo.toml
crates/brownie-agent-loop/src/: lib.rs
crates/brownie-agentmodes/: Cargo.toml
crates/brownie-agentmodes/src/: lib.rs
crates/brownie-common/: Cargo.toml
crates/brownie-common/src/: lib.rs
crates/brownie-config/: Cargo.toml
crates/brownie-config/src/: lib.rs
crates/brownie-context/: Cargo.toml
crates/brownie-context/src/: lib.rs
crates/brownie-events/: Cargo.toml
crates/brownie-events/src/: lib.rs
crates/brownie-indexer/: Cargo.toml
crates/brownie-indexer/src/: lib.rs
crates/brownie-llama/: Cargo.toml
crates/brownie-llama/src/: lib.rs
crates/brownie-llm/: Cargo.toml
crates/brownie-llm/src/: lib.rs
crates/brownie-modepack/: Cargo.toml
crates/brownie-modepack/src/: lib.rs
crates/brownie-protocol/: Cargo.toml
crates/brownie-protocol/src/: lib.rs
crates/brownie-qdrant/: Cargo.toml
crates/brownie-qdrant/src/: lib.rs
crates/brownie-runtime/: Cargo.toml
crates/brownie-runtime/src/: lib.rs  main.rs
crates/brownie-store/: Cargo.toml
crates/brownie-store/src/: lib.rs
crates/brownie-tools/: Cargo.toml
crates/brownie-tools/src/: lib.rs
docs/: # 次世代自律型AIエージェント 基本システム設計書（アーキテクチャ・ブループリ.md  Home.md  src_core_agent.md  src_core_graph_builder.md  src_core_graph_nodes_analysis.md  src_core_graph_nodes_completion.md  src_core_graph_nodes_execution.md  src_core_graph_nodes_governance.md  src_core_graph_nodes_handshake.md  src_core_graph_nodes_intent.md  src_core_graph_state.md  src_core_orchestrator.md  src_core_state.md  src_core_worker_pool.md  src_core_workflow.md  src_gh_platform_client.md  src_mcp_server_knowledge_server.md  src_mcp_server_manager.md  src_mcp_server_workspace_server.md  src_version.md  src_workspace_analyzer_core.md  src_workspace_analyzer_flow.md  src_workspace_context.md  src_workspace_git_ops.md  src_workspace_repomix_runner.md  src_workspace_sandbox.md
docs/architecture/: diagnostics-api-consolidation.md  diagnostics-legacy-api-metadata.json  diagnostics-wrapper-history.md  m5-closeout-review.md  m6-closeout-review.md  m7-closeout-review.md  m8-closeout-review.md  phase-value-gate.md  phase-value-manifest.json  phase-value-manifest.m5.11.json  phase-value-manifest.m5.12.json  phase-value-manifest.m5.13.json  phase-value-manifest.m5.14.json  phase-value-manifest.m5.15.json  phase-value-manifest.m5.16.json  phase-value-manifest.m5.17.json  phase-value-manifest.m5.18.json  phase-value-manifest.m5.19.json  phase-value-manifest.m5.20.json  phase-value-manifest.m5.21.json  phase-value-manifest.m5.22.json  phase-value-manifest.m5.23.json  phase-value-manifest.m5.24.json  phase-value-manifest.m5.25.json  phase-value-manifest.m5.26.json  phase-value-manifest.m5.27.json  phase-value-manifest.m5.28.json  phase-value-manifest.m5.29.json  phase-value-manifest.m5.30.json  phase-value-manifest.m5.31.json  phase-value-manifest.m5.32.json  phase-value-manifest.m5.33.json  phase-value-manifest.m5.34.json  phase-value-manifest.m5.35.json  phase-value-manifest.m5.36.json  phase-value-manifest.m5.37.json  phase-value-manifest.m5.38.json  phase-value-manifest.m6.1.json  phase-value-manifest.m6.2.json  phase-value-manifest.m6.3.json  (+14 more)
docs/decisions/: 0001-create-brownie-as-new-repository.md
docs/specifications/: agent-loop-spec-v0.md  agentmodes-compatibility-spec-v0.md  brownie-scope-v0.md  context-window-spec-v0.md  indexing-spec-v0.md  llm-health-spec-v0.md  llm-provider-spec-v0.md  llm-request-budget-spec-v0.md  mode-policy-spec-v0.md  modepack-spec-v0.md  openai-compatible-smoke-spec-v0.md  patch-proposal-spec-v0.md  permission-gate-spec-v0.md  prompt-builder-spec-v0.md  prompt-sensitive-guard-spec-v0.md  real-provider-task-run-smoke-spec-v0.md  run-inspection-spec-v0.md  runtime-config-spec-v0.md  runtime-diagnostics-spec-v0.md  runtime-protocol-spec-v0.md  task-runtime-spec-v0.md  tool-execution-spec-v0.md  tool-feedback-loop-spec-v0.md  tool-intent-parser-hardening-spec-v0.md  tool-intent-spec-v0.md  tool-planning-spec-v0.md
extensions/brownie-vsix/: package.json
extensions/brownie-vsix/src/: extension.ts
scratch/: diagnose_github_conn.py  force_trigger.py  solve_stale.py  test_graph.py  test_huey.py  test_instructor.py  test_pygithub.py  test_worker_flow.py  verify_worker.py
scripts/: build_grammars.py  guard-diagnostics-api.mjs  guard-phase-value.mjs  guard-phase-value.test.mjs
src/: main.py  new_log.txt  version.py  watchdog.py
src/core/: agent.py  orchestrator.py  persistence.py  state.py  worker_pool.py  workers.pool.py  workflow.py
src/core/graph/: builder.py  state.py
src/core/validation/: bridge.py  schemas.py
src/core/workers/: pool.py  tasks.py
src/docs/: About-System.md
src/gh_platform/: client.py  filter.py
src/github/: client.py
src/llm/: model_manager.py
src/mcp/: __init__.py  knowledge_server.py
src/mcp_server/: manager.py  workspace_server.py
src/mcp_server/plugins/: api_analyzer.py  arch_diagram.py  clone_detector.py  db_profiler.py  dep_audit.py  design_pattern_oracle.py  git_archeology.py  graph_memory.py  meta_search.py  security_analyzer.py  test_coverage.py  trace_analyzer.py  web_fetch.py
src/memory/: vector_db.py
src/utils/: reset_system.py
src/workspace/: context.py  git_ops.py  linter.py  repomix_runner.py  sandbox.py  watcher.py  wiki_sync.py
tests/: repro_mcp.py  repro_mcp_cmd.py  repro_mcp_fix.py  repro_mcp_lifecycle.py  repro_mcp_str.py  test_e2e_mcp.py  test_flow_networkx.py
tests/test_data/: tmp_config.yaml
tmp/: debug_agent.py
(+15 files in other folders)
