[workspace]
members = [
  "crates/brownie-common",
  "crates/brownie-protocol",
  "crates/brownie-runtime",
  "crates/brownie-agent-loop",
  "crates/brownie-agentmodes",
  "crates/brownie-modepack",
  "crates/brownie-context",
  "crates/brownie-tools",
  "crates/brownie-llm",
  "crates/brownie-llama",
  "crates/brownie-qdrant",
  "crates/brownie-indexer",
  "crates/brownie-store",
  "crates/brownie-events"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
publish = false
repository = "https://github.com/globalpocket/brownie"
rust-version = "1.78"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["formatting", "macros"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
