[package]
name = "brownie-agent-loop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
brownie-context = { path = "../brownie-context" }
brownie-llm = { path = "../brownie-llm" }

[lib]
path = "src/lib.rs"
