[package]
name = "brownie-context"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
brownie-protocol = { path = "../brownie-protocol" }
brownie-store = { path = "../brownie-store" }
serde.workspace = true

[lib]
path = "src/lib.rs"
