[package]
name = "brownie-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[lib]
path = "src/lib.rs"
