[package]
name = "brownie-modepack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
brownie-agentmodes = { path = "../brownie-agentmodes" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
