[package]
name = "brownie-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
brownie-protocol = { path = "../brownie-protocol" }
serde_json.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "brownie-runtime"
path = "src/main.rs"
