[package]
name = "brownie-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
brownie-agentmodes = { path = "../brownie-agentmodes" }
brownie-agent-loop = { path = "../brownie-agent-loop" }
brownie-context = { path = "../brownie-context" }
brownie-config = { path = "../brownie-config" }
brownie-llm = { path = "../brownie-llm" }
brownie-protocol = { path = "../brownie-protocol" }
brownie-store = { path = "../brownie-store" }
brownie-tools = { path = "../brownie-tools" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "brownie-runtime"
path = "src/main.rs"
