[package]
name = "brownie-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
brownie-protocol = { path = "../brownie-protocol" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
path = "src/lib.rs"
